# ZLUDA

./: Cargo.toml
hiprand-sys/: Cargo.toml  README  build.rs
hiprand-sys/src/: hiprand.rs  lib.rs
hipsolver-sys/: Cargo.toml  README  build.rs
hipsolver-sys/src/: hipsolver.rs  lib.rs
rocsolver-sys/src/: rocsolver.rs
rocsparse-sys/src/: rocsparse.rs
zluda_blas/src/: cublas.rs  lib.rs
zluda_dnn/src/: cudnn_v7.rs  cudnn_v8.rs  lib.rs
zluda_fft/src/: cufft.rs  cufftxt.rs  lib.rs
zluda_rand/: Cargo.toml  README
zluda_rand/src/: curand.rs  lib.rs
zluda_solver/: Cargo.toml  README
zluda_solver/include/: cusolver.h
zluda_solver/src/: cusolver.rs  lib.rs
zluda_sparse/src/: cusparse.rs  lib.rs
